<resources>
    <string name="app_name" translatable="false">Fursa</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="login_email_edit_text" translatable="false">Email</string>
    <string name="password_text" translatable="false">Password</string>
    <string name="login_button" translatable="false">Login</string>
    <string name="login_register_edit_text" translatable="false">Register with Email</string>
    <string name="acc_name_hint" translatable="false">Your name</string>
    <string name="acc_save_button" translatable="false">Save settings</string>
    <string name="submit_new_post_button" translatable="false">Submit</string>
    <string name="new_post_description_hint" translatable="false">Add description</string>
    <string name="facebook_app_id" translatable="false">195155624430705</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb195155624430705</string>
    <string name="title_activity_scrolling" translatable="false">New Post</string>
    <string name="fursa_url_post_head" translatable="false">http://fursa.nyayozangu.com/post/</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://fursa.nyayozangu.com\",\n  }\n}]</string>
    <string name="finish_tut_text" translatable="false">Finish</string>
    <string name="back_tut_text" translatable="false">Back</string>
    <string name="next_text" translatable="false">Next</string>
    <string name="title_activity_view_category" translatable="false">View category</string>
    <string name="posted_by_text" translatable="false">Posted by:</string>
    <string name="search_hint" translatable="false">Search</string>
    <string name="cat_featured" translatable="false">Featured</string>
    <string name="cat_popular" translatable="false">Popular</string>
    <string name="cat_upcoming" translatable="false">Up Coming</string>
    <string name="cat_events" translatable="false">Events</string>
    <string name="cat_business" translatable="false">Business</string>
    <string name="cat_buysell" translatable="false">Buy and sell</string>
    <string name="cat_education" translatable="false">Education</string>
    <string name="cat_jobs" translatable="false">Jobs</string>
    <string name="cat_queries" translatable="false">Discussions</string>
    <string name="failed_to_connect_text" translatable="false">Failed to connect to the internet</string>
    <string name="log_to_subscribe_text" translatable="false">Log in to subscribe</string>
    <string name="subscribe_to_text" translatable="false">Subscribed to</string>
    <string name="sucscribe_failed_text" translatable="false">Failed to subscribe</string>
    <string name="done_text" translatable="false">Done</string>
    <string name="about_hint_acc_text" translatable="false">About</string>
    <string name="account_settings_acc_text" translatable="false">Account settings</string>
    <string name="post_your_comment_hint" translatable="false">Post your comment here</string>
    <string name="submit_text" translatable="false">Submit</string>
    <string name="enter_email_hint" translatable="false">Enter an email address</string>
    <string name="confirm_password_reg_edit_text" translatable="false">Confirm password</string>
    <string name="chose_password_reg_edittext" translatable="false">Chose a password</string>
    <string name="register_reg_button_text" translatable="false">Register</string>
    <string name="have_account_reg_button_text" translatable="false">Have an Account?</string>
    <string name="sign_up_with_email_reg_text" translatable="false">Sign up with email</string>
    <string name="user_bio_sett_textview_hint" translatable="false">User Bio</string>
    <string name="username_sett_textview_hint" translatable="false">Username</string>
    <string name="logout_sett_button" translatable="false">Logout</string>
    <string name="edit_profile_sett_button" translatable="false">Edit Profile</string>
    <string name="my_subscriptions_sett_button" translatable="false">My Subscriptions</string>
    <string name="my_posts_sett_button" translatable="false">My Posts</string>
    <string name="contact_us_sett_button" translatable="false">Contact us</string>
    <string name="privacy_policy_sett_button" translatable="false">Terms and conditions and Privacy Policy</string>
    <string name="feedback_sett_button" translatable="false">Feedback</string>
    <string name="title_activity_my_posts" translatable="false">MyPostsActivity</string>
    <string name="cancel_text" translatable="false">Cancel</string>
    <string name="login_text" translatable="false">Login</string>
    <string name="not_logged_in_text" translatable="false">You are not logged in</string>
    <string name="login_to_post_text" translatable="false">Log in to post items</string>
    <string name="title_activity_my_subscriptions" translatable="false">My Subscriptions</string>
    <string name="login_to_view_post_text" translatable="false">Login to view your posts</string>
    <string name="login_to_view_subs_text" translatable="false">Login to view your subscriptions</string>
    <string name="search_view_query_hint_text" translatable="false">Search Fursa</string>
    <string name="title_text" translatable="false">Title</string>
    <string name="comment_text" translatable="false">Comment</string>
    <string name="username_text" translatable="false">Username</string>
    <string name="contact_name_hint" translatable="false">Contact name</string>
    <string name="phone_hint" translatable="false">Phone number</string>
    <string name="email_website_hint" translatable="false">Email, website, or link</string>
    <string name="enter_post_title_create_post_hint_text" translatable="false">Enter a title for your post</string>
    <string name="enter_description_hint_text" translatable="false">Enter a description</string>
    <string name="enter_contact_details_create_post_hint_text" translatable="false">Enter contact details (optional)</string>
    <string name="select_categories_create_post_hint_text" translatable="false">Select related categories</string>
    <string name="enter_location_create_post_hint_text" translatable="false">Enter a location (optional)</string>
    <string name="enter_event_date_create_post_hint_text" translatable="false">Enter a date for an event (optional)</string>
    <string name="enter_event_end_date_create_post_hint_text" translatable="false">Enter an end date for an event (optional)</string>
    <string name="enter_price_create_post_hint_text" translatable="false">Enter a price value (optional)</string>
    <string name="zero_text" translatable="false">0</string>
    <string name="save_text" translatable="false">Save</string>
    <string name="share_text" translatable="false">Share</string>
    <string name="title_view_post_text" translatable="false">Title</string>
    <string name="desc_text" translatable="false">Description</string>
    <string name="contact_view_post_text" translatable="false">Contact</string>
    <string name="location_view_post_text" translatable="false">Location</string>
    <string name="event_date_view_post_text" translatable="false">Event Date</string>
    <string name="price_view_post_text" translatable="false">Price</string>
    <string name="time_view_post_text" translatable="false">Time</string>
    <string name="user_view_post_text" translatable="false">User</string>
    <string name="login_alert_fragment_text" translatable="false">Login</string>
    <string name="login_to_view_saved_items_text" translatable="false">Login to view saved items</string>
    <string name="date_post_placeholder_text" translatable="false">Jan 14 2018</string>
    <string name="username_post_placeholder_text" translatable="false">Username</string>
    <string name="desc_post_placeholder_text" translatable="false">this is random text for the placeholder of the image veia hdod lookd i=too maih intteo iwws</string>
    <string name="location__post_placeholder_text" translatable="false">Dar es Salaam Tanzania</string>
    <string name="post_title__post_placeholder_text" translatable="false">Post Title</string>
    <string name="name_text" translatable="false">Name</string>
    <string name="phone_text" translatable="false">Phone</string>
    <string name="email_text" translatable="false">Email</string>
    <string name="search_text" translatable="false">Search</string>
    <string name="cat_places" translatable="false">Places</string>
    <string name="report_text" translatable="false">Report</string>
    <string name="edit_text" translatable="false">Edit</string>
    <string name="delete_text" translatable="false">Delete</string>
    <string name="login_with_email_text" translatable="false">Login with Email</string>
    <string name="post_not_found_text" translatable="false">Could not find post</string>
    <string name="posting_text" translatable="false">Posting…</string>
    <string name="internet_fail" translatable="false">Failed to connect to the internet</string>
    <string name="added_to_saved_text" translatable="false">Added to saved items</string>
    <string name="login_to_view_options_text" translatable="false">Login to view post options</string>
    <string name="login_to_like" translatable="false">Login to like items</string>
    <string name="default_notification_channel_name" translatable="false">Updates</string>
    <string name="email_ver_text" translatable="false">Email Verification</string>
    <string name="ok_text" translatable="false">Ok</string>
    <string name="send_email_text" translatable="false">Sending Email…</string>
    <string name="verify_to_comment_text" translatable="false">You have to verify your email address to comment on a post.</string>
    <string name="login_to_create_post" translatable="false">Login to create a post</string>
    <string name="title_activity_view_image" translatable="false">ViewImageActivity</string>
    <string name="logging_in_text" translatable="false">Logging in…</string>
    <string name="see_list_text" translatable="false">See list</string>
    <string name="login_to_save_text" translatable="false">Log in to save items</string>
    <string name="email_sent_text" translatable="false">Email sent</string>
    <string name="confirm_del_text" translatable="false">Are you sure you want to delete this post?</string>
    <string name="del_post_text" translatable="false">Delete Post</string>
    <string name="del_success_text" translatable="false">Post successfully Deleted</string>
    <string name="loading_text" translatable="false">Loading…</string>
    <string name="exit_text" translatable="false">Exit</string>
    <string name="confirm_ext_text" translatable="false">Are you sure you want to exit?</string>
    <string name="report_submit_failed_text" translatable="false">Failed to submit report</string>
    <string name="login_to_report" translatable="false">Log in to report content</string>
    <string name="categories_text" translatable="false">Categories</string>
    <string name="min_ago_text" translatable="false">1 minute ago</string>
    <string name="hr_ago_text" translatable="false">1 hour ago</string>
    <string name="hrs_ago_text" translatable="false">hours ago</string>
    <string name="day_ago_text" translatable="false">days ago</string>
    <string name="weeks_ago_text" translatable="false">weeks ago</string>
    <string name="months_ago_text" translatable="false">months ago</string>
    <string name="my_posts_text" translatable="false">My posts</string>
    <string name="view_terms_text">View terms</string>
    <string name="about_text">About</string>
    <string name="my_subscriptions_text">My subscriptions</string>
    <string name="my_saved_posts_text">My saved posts</string>
    <string name="follow_text">Follow</string>
</resources>